# AtlasFileExplorer

./: .gitignore  AGENTS.md  CONSTITUTION.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.cursor/: environment.json
.cursor/rules/: constitution.mdc  dock-chrome.mdc  shared-chrome.mdc
.cursor/skills/tool-contract/: SKILL.md
apps/file-atlas/: Cargo.toml  build.rs
apps/file-atlas/src/: lib.rs  main.rs
apps/file-atlas/src/app/: ARCHITECTURE.md  COMMANDS.md  chrome.rs  commands.rs  mod.rs  tests.rs
apps/file-atlas/src/app/ui/: activity_heatmap.rs  advanced.rs  menubar.rs  mod.rs  readouts.rs  tabs.rs  tools.rs
apps/slate/: Cargo.toml  build.rs
apps/slate/src/: lib.rs  main.rs
apps/slate/src/app/: ARCHITECTURE.md  COMMANDS.md  association.rs  board.rs  board_color.rs  board_crop.rs  board_direct.rs  board_flags.rs  board_handles.rs  board_icons.rs  board_line.rs  board_path.rs  board_snap.rs  board_style.rs  board_wire.rs  canvas.rs  chrome.rs  clipboard.rs  commands.rs  dispatch.rs  imagefx.rs  lens.rs  mod.rs  model3d.rs  overlays.rs  pdf.rs  present.rs  preview.rs  session.rs  settings.rs  tests.rs
apps/slate/src/app/ui/: advanced.rs  inspector.rs  menubar.rs  mod.rs  readouts.rs  tabs.rs  tools.rs
crates/atlas-ai/: Cargo.toml
crates/atlas-ai/src/: config.rs  context.rs  launch.rs  lib.rs  ui.rs
crates/atlas-commands/: Cargo.toml  DESIGN.md
crates/atlas-commands/src/: cancel.rs  history.rs  lib.rs  palette.rs  registry.rs  spec.rs
crates/atlas-core/: Cargo.toml
crates/atlas-core/src/: export.rs  index.rs  journal.rs  lib.rs  metadata.rs  office.rs  pdf.rs  preview.rs  scanner.rs  thumbs.rs  tree.rs  types.rs
crates/atlas-session/: Cargo.toml
crates/atlas-session/src/: lib.rs
crates/atlas-shell/: Cargo.toml  DOCK.md  PAINT.md  TOPBAR.md  ui-tokens.toml
crates/atlas-shell/src/: SIDEBAR.md  chrome.rs  commands.rs  covers.rs  dock.rs  grid_fade.rs  history_ui.rs  home.rs  lib.rs  menubar.rs  minimap.rs  palette.rs  prefs.rs  recent.rs  sidebar.rs  tabs.rs  taper.rs  theme.rs  tokens.rs  tuning.rs  widgets.rs
crates/circle-pack/: Cargo.toml
crates/circle-pack/src/: geometry.rs  lib.rs  pack.rs  venn.rs
crates/code-lens/: Cargo.toml
crates/code-lens/src/: beacon.rs  layout.rs  lib.rs  model.rs  overlay.rs
crates/code-lens/src/extract/: cargo.rs  mod.rs  modules.rs  rust_src.rs
crates/code-lens/tests/: extract_smoke.rs  pipeline_smoke.rs  self_layout_stats.rs
crates/code-lens/tests/fixtures/mini-ws/: Cargo.toml
crates/code-lens/tests/fixtures/mini-ws/apps/demo-app/: Cargo.toml
crates/code-lens/tests/fixtures/mini-ws/apps/demo-app/src/: main.rs
crates/code-lens/tests/fixtures/mini-ws/core-lib/: Cargo.toml
crates/code-lens/tests/fixtures/mini-ws/core-lib/src/: lib.rs
crates/code-lens/tests/fixtures/mini-ws/core-lib/src/shapes/: rect.rs
crates/code-lens/tests/fixtures/mini-ws/geo/: Cargo.toml
crates/code-lens/tests/fixtures/mini-ws/geo/src/: lib.rs
crates/code-lens/tests/fixtures/mini-ws/geo/src/util/: local.rs  mod.rs
crates/rhino-mesh/: Cargo.toml
crates/rhino-mesh/src/: attributes.rs  brep.rs  chunk.rs  lib.rs  mesh.rs
crates/rhino-mesh/tests/: read_fixtures.rs
crates/rhino-mesh/tests/fixtures/: brep_with_render_mesh.3dm  empty.3dm  extrusion.3dm  generate.py  mesh_sphere.3dm  quads.3dm
crates/slate-artifact/: Cargo.toml
crates/slate-artifact/src/: assets.rs  lib.rs  render.rs
crates/slate-artifact/tests/: export_smoke.rs
crates/slate-doc/: Cargo.toml
crates/slate-doc/src/: doc.rs  error.rs  ids.rs  item.rs  lib.rs  link.rs  media.rs  scene.rs  tags.rs  view.rs
crates/vector-ink/: Cargo.toml  DESIGN.md
crates/vector-ink/src/: dash.rs  edit.rs  fit.rs  flatten.rs  geom.rs  hit.rs  lib.rs  mesh.rs  stroke.rs
docs/: facet-taxonomy.md  lens-agent-contract.md  lens-plan.md  ui-tuning-workflow.md
docs/keymap/: ARCHITECTURE.md  CHANGELOG.md  KEYMAP.md
docs/keymap/contracts/: DIMENSIONS.md  PATTERNS.md  TEMPLATE.md  decisions.json  line.md
docs/keymap/research/: grasshopper.md  illustrator.md  miro.md  photoshop.md  rhino.md
docs/keymap/specs/: atlas-adoption.md  brush-color.md  command-registry.md  connectors.md  constraints.md  direct-selection.md  overlays.md  scene-flags.md
docs/lens/: example-overlay-atlas.json
scripts/: verify-lens-windows.ps1
src/: export.rs  index.rs  main.rs  metadata.rs  office.rs  pdf.rs  scanner.rs  threedm.rs  thumbs.rs  tree.rs  types.rs  watcher.rs
src/app/: ARCHITECTURE.md  COMMANDS.md  canvas.rs  chrome.rs  commands.rs  mod.rs  overlays.rs  platform.rs  prewarm.rs  tests.rs  theme.rs
src/app/ui/: READOUTS.md  SIDEBAR.md  activity_heatmap.rs  advanced.rs  mod.rs  readout_dashboard.rs  readouts.rs  sidebar.rs  tabs.rs  tools.rs  widgets.rs
