[workspace]
resolver = "2"
members = [
    "crates/atlas-core",
    "crates/atlas-shell",
    "crates/atlas-session",
    "crates/slate-doc",
    "crates/circle-pack",
    "apps/file-atlas",
    "apps/slate",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Shared third-party deps — always reference these from member crates so the
# whole ecosystem stays on a single version of egui and friends.
eframe = "0.31"
crossbeam-channel = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "8"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
pdfium-render = { version = "0.8", features = ["thread_safe"] }

# Workspace crates.
atlas-core = { path = "crates/atlas-core" }
atlas-shell = { path = "crates/atlas-shell" }
atlas-session = { path = "crates/atlas-session" }
slate-doc = { path = "crates/slate-doc" }
circle-pack = { path = "crates/circle-pack" }
native-file-atlas = { path = "apps/file-atlas" }

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1

# Dependencies (egui, image decoding) are far too slow at opt-level 0.
[profile.dev.package."*"]
opt-level = 2
