[workspace]
resolver = "2"
members = [
    "crates/atlas-core",
    "crates/atlas-shell",
    "crates/atlas-session",
    "crates/atlas-ai",
    "crates/atlas-commands",
    "crates/slate-doc",
    "crates/slate-artifact",
    "crates/circle-pack",
    "crates/vector-ink",
    "crates/code-lens",
    "crates/rhino-mesh",
    "apps/file-atlas",
    "apps/slate",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
# Shared third-party deps — always reference these from member crates so the
# whole ecosystem stays on a single version of egui and friends.
eframe = "0.31"
crossbeam-channel = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "8"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
syn = { version = "2", features = ["full", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
dirs = "6"
zip = { version = "2", default-features = false, features = ["deflate"] }
pdfium-render = { version = "0.8", features = ["thread_safe"] }
flate2 = "1"
kurbo = "0.13.1"

# Workspace crates.
atlas-core = { path = "crates/atlas-core" }
atlas-shell = { path = "crates/atlas-shell" }
atlas-session = { path = "crates/atlas-session" }
atlas-ai = { path = "crates/atlas-ai" }
atlas-commands = { path = "crates/atlas-commands" }
slate-doc = { path = "crates/slate-doc" }
slate-artifact = { path = "crates/slate-artifact" }
circle-pack = { path = "crates/circle-pack" }
vector-ink = { path = "crates/vector-ink" }
code-lens = { path = "crates/code-lens" }
rhino-mesh = { path = "crates/rhino-mesh" }
native-file-atlas = { path = "apps/file-atlas" }

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1

# Dependencies (egui, image decoding) are far too slow at opt-level 0.
[profile.dev.package."*"]
opt-level = 2
