[package]
name = "native-file-atlas"
version.workspace = true
edition.workspace = true
description = "File Atlas — native, high-performance visual file organizer"

[dependencies]
atlas-core = { workspace = true }
atlas-shell = { workspace = true }
eframe = { workspace = true }
crossbeam-channel = { workspace = true }
rfd = { workspace = true }
image = { workspace = true }
