[package]
name = "slate"
version.workspace = true
edition.workspace = true
description = "Slate — tag-driven workbook dashboard for the Atlas ecosystem"

[features]
default = []
ui-tuner = ["atlas-shell/ui-tuner"]

[dependencies]
atlas-core = { workspace = true }
atlas-shell = { workspace = true }
atlas-session = { workspace = true }
atlas-ai = { workspace = true }
slate-doc = { workspace = true }
slate-artifact = { workspace = true }
circle-pack = { workspace = true }
code-lens = { workspace = true }
rhino-mesh = { workspace = true }
native-file-atlas = { workspace = true }
eframe = { workspace = true }
crossbeam-channel = { workspace = true }
rfd = { workspace = true }
image = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"
