[package]
name = "atlas-ai"
version.workspace = true
edition.workspace = true
description = "AI / Cursor integration shared by File Atlas and Slate: workspace link, launcher, context beacon, sidebar panel"

[dependencies]
atlas-core = { workspace = true }
atlas-shell = { workspace = true }
eframe = { workspace = true }
crossbeam-channel = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
