[package]
name = "atlas-shell"
version.workspace = true
edition.workspace = true
description = "Shared UI chrome for the Atlas ecosystem: theme, tab strip, sidebar primitives, widgets, panel registry, command reference"

[features]
default = []
ui-tuner = []

[dependencies]
atlas-core = { workspace = true }
eframe = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
