[package]
name = "code-lens"
version = "0.1.0"
edition = "2021"
description = "UI-free codebase graph analysis and layout for Slate Lens view"
license = "MIT"

[lib]
name = "code_lens"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
syn = { workspace = true }
proc-macro2 = { workspace = true }
